[gd_scene load_steps=10 format=3 uid="uid://cofj8o8fnvp5a"]

[ext_resource type="Script" path="res://GuiButtons.gd" id="1_s3m7n"]
[ext_resource type="Texture2D" uid="uid://bu6sevdk4gq4s" path="res://UI_elements/Bag.png" id="2_mksqs"]
[ext_resource type="FontFile" uid="uid://b612xtjrwuei6" path="res://Font/Roboto-Bold.ttf" id="2_sqxw8"]
[ext_resource type="Texture2D" uid="uid://bqorgijdsowwp" path="res://FantasyUI2/Panel/panel-015.png" id="3_bfkdr"]
[ext_resource type="Texture2D" uid="uid://clghtlg1tjsnf" path="res://UI_elements/Helm.png" id="5_sth73"]
[ext_resource type="Texture2D" uid="uid://bt4sdga1p8ox5" path="res://UI_elements/Book 3.png" id="6_1gt45"]
[ext_resource type="Texture2D" uid="uid://dudag41p0hdfu" path="res://UI_elements/Envolop.png" id="7_t6438"]
[ext_resource type="Texture2D" uid="uid://nacpt1v33ixe" path="res://UI_elements/Gear.png" id="8_s7xt2"]

[sub_resource type="FontFile" id="32"]
fallbacks = Array[Font]([ExtResource("2_sqxw8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="GuiButtons" type="HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_s3m7n")

[node name="BackpackButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("2_mksqs")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="BackpackButton"]
self_modulate = Color(0, 0, 0, 0.658824)
layout_mode = 0
offset_right = 19.0
offset_bottom = 21.0
texture = ExtResource("3_bfkdr")
expand_mode = 1

[node name="Label" type="Label" parent="BackpackButton/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("32")
text = "I"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("5_sth73")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="CharacterButton"]
self_modulate = Color(0, 0, 0, 0.658824)
layout_mode = 0
offset_right = 19.0
offset_bottom = 21.0
texture = ExtResource("3_bfkdr")
expand_mode = 1

[node name="Label" type="Label" parent="CharacterButton/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("32")
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillsButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("6_1gt45")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="SkillsButton"]
self_modulate = Color(0, 0, 0, 0.658824)
layout_mode = 0
offset_right = 19.0
offset_bottom = 21.0
texture = ExtResource("3_bfkdr")
expand_mode = 1

[node name="Label" type="Label" parent="SkillsButton/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("32")
text = "K"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("7_t6438")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="QuestButton"]
self_modulate = Color(0, 0, 0, 0.658824)
layout_mode = 0
offset_right = 19.0
offset_bottom = 21.0
texture = ExtResource("3_bfkdr")
expand_mode = 1

[node name="Label" type="Label" parent="QuestButton/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("32")
text = "L"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("8_s7xt2")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="SettingsButton"]
self_modulate = Color(0, 0, 0, 0.658824)
layout_mode = 0
offset_right = 31.0
offset_bottom = 21.0
texture = ExtResource("3_bfkdr")
expand_mode = 1

[node name="Label" type="Label" parent="SettingsButton/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("32")
text = "ESC"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="BackpackButton" to="." method="_on_backpack_button_button_up"]
[connection signal="button_up" from="CharacterButton" to="." method="_on_character_button_button_up"]
[connection signal="pressed" from="SkillsButton" to="." method="_on_skills_button_pressed"]
[connection signal="pressed" from="QuestButton" to="." method="_on_quest_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
